add_custom_target(ossfuzz)
add_dependencies(ossfuzz
        solc_ossfuzz
        solc_mutator_ossfuzz
        const_opt_ossfuzz
        strictasm_opt_ossfuzz
        strictasm_assembly_ossfuzz
)

if (OSSFUZZ)
    add_custom_target(ossfuzz_proto)
    add_dependencies(ossfuzz_proto
            sol_proto_ossfuzz_nondiff
            sol_proto_ossfuzz_evmone
            sol_proto_ossfuzz_evmone_viair
            sol_ice_ossfuzz
            yul_proto_ossfuzz_evmone
            yul_proto_ossfuzz_evmone_ssacfg
            yul_proto_ossfuzz_evmone_check_stack_alloc
            yul_proto_ossfuzz_evmone_single_pass_c
            yul_proto_ossfuzz_evmone_single_pass_S
            yul_proto_ossfuzz_evmone_single_pass_L
            yul_proto_ossfuzz_evmone_single_pass_M
            yul_proto_ossfuzz_evmone_single_pass_s
            yul_proto_ossfuzz_evmone_single_pass_r
            yul_proto_ossfuzz_evmone_single_pass_D
            yul_proto_ossfuzz_evmone_no_ssa
            shuffler_proto_ossfuzz
            sol_recstruct_alias_ossfuzz
            sol_roundtrip_ossfuzz
    )

    add_custom_target(ossfuzz_abiv2)
    add_dependencies(ossfuzz_abiv2 abiv2_proto_ossfuzz)
endif()

if (OSSFUZZ)
    # --- Native fuzz dependencies (staged into deps/ by scripts/build_ossfuzz.sh) ---
    # libprotobuf-mutator and evmone-standalone are the only deps still built
    # from source; everything else (protobuf 35, abseil, boost) comes from the
    # system. LPM_PREFIX / EVMONE_PREFIX are passed on the cmake command line by
    # the build script; both default to the in-tree deps/ prefix.
    if (NOT LPM_PREFIX)
        set(LPM_PREFIX "${CMAKE_SOURCE_DIR}/deps")
    endif()
    if (NOT EVMONE_PREFIX)
        set(EVMONE_PREFIX "${CMAKE_SOURCE_DIR}/deps")
    endif()

    # LPM harnesses include <src/libfuzzer/libfuzzer_macro.h>; evmone harnesses
    # include <evmone/evmone.h>. Both header roots are added for every target.
    set(FUZZ_LPM_INCLUDE "${LPM_PREFIX}/include/libprotobuf-mutator")
    set(FUZZ_EVMONE_INCLUDE "${EVMONE_PREFIX}/include")
    include_directories(${FUZZ_LPM_INCLUDE} ${FUZZ_EVMONE_INCLUDE})

    find_library(LPM_FUZZER_LIB protobuf-mutator-libfuzzer PATHS "${LPM_PREFIX}/lib" REQUIRED)
    find_library(LPM_LIB protobuf-mutator PATHS "${LPM_PREFIX}/lib" REQUIRED)
    find_library(EVMONE_STANDALONE_LIB evmone-standalone PATHS "${EVMONE_PREFIX}/lib" REQUIRED)
    # System protobuf. Prefer CONFIG mode (modern protobuf ≥22 ships a cmake
    # package config whose protobuf::libprotobuf target carries the abseil link
    # deps); fall back to the FindProtobuf module for older distro protobufs
    # that predate both the config files and the abseil dependency.
    find_package(Protobuf CONFIG QUIET)
    if (NOT Protobuf_FOUND)
        find_package(Protobuf MODULE REQUIRED)
    endif()

    # Reusable link-library groups: replaces the old hard-coded
    # `evmone-standalone protobuf-mutator-libfuzzer.a protobuf-mutator.a protobuf.a`.
    set(FUZZ_PROTO_LIBS ${LPM_FUZZER_LIB} ${LPM_LIB} protobuf::libprotobuf)
    set(FUZZ_EVMONE_LIBS ${EVMONE_STANDALONE_LIB})

    add_executable(solc_ossfuzz
            solc_ossfuzz.cpp
            ../common/fuzzer_common.cpp
            ${TESTCASEREADER_CPP}
    )
    target_link_libraries(solc_ossfuzz PRIVATE libsolc evmasm)
    set_target_properties(solc_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    add_executable(solc_mutator_ossfuzz
            solc_ossfuzz.cpp
            ../common/fuzzer_common.cpp
            ${TESTCASEREADER_CPP}
            SolidityGenerator.cpp
            SolidityCustomMutatorInterface.cpp
    )
    target_link_libraries(solc_mutator_ossfuzz PRIVATE libsolc evmasm)
    set_target_properties(solc_mutator_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    add_executable(const_opt_ossfuzz const_opt_ossfuzz.cpp ../common/fuzzer_common.cpp)
    target_link_libraries(const_opt_ossfuzz PRIVATE libsolc evmasm)
    set_target_properties(const_opt_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    add_executable(strictasm_opt_ossfuzz strictasm_opt_ossfuzz.cpp)
    target_link_libraries(strictasm_opt_ossfuzz PRIVATE yul)
    set_target_properties(strictasm_opt_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    add_executable(strictasm_assembly_ossfuzz strictasm_assembly_ossfuzz.cpp)
    target_link_libraries(strictasm_assembly_ossfuzz PRIVATE yul)
    set_target_properties(strictasm_assembly_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})

    # The -Wno-* compile options are required for source files that
    # are auto-generated by the protobuf compiler because the compiler
    # does not generate warning-free C++ bindings with regard to
    # upstream Clang builds that are used by ossfuzz.
    set(
        SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS
        -Wno-sign-conversion
        -Wno-suggest-destructor-override
        -Wno-inconsistent-missing-destructor-override
        -Wno-shorten-64-to-32
        -Wno-deprecated
    )

    add_executable(yul_proto_ossfuzz_evmone
            yulProtoFuzzerEvmone.cpp
            FuzzerDiffCommon.cpp
            protoToYul.cpp
            yulProto.pb.cc
            ${EVMHOST_CPP}
            YulEvmoneInterface.cpp
    )
    target_include_directories(yul_proto_ossfuzz_evmone PRIVATE ${FUZZ_LPM_INCLUDE})
    target_link_libraries(yul_proto_ossfuzz_evmone PRIVATE yul
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(yul_proto_ossfuzz_evmone PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(yul_proto_ossfuzz_evmone PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    add_executable(yul_proto_ossfuzz_evmone_ssacfg
            yulProtoFuzzerEvmone.cpp
            FuzzerDiffCommon.cpp
            protoToYul.cpp
            yulProto.pb.cc
            ${EVMHOST_CPP}
            YulEvmoneInterface.cpp
    )
    target_include_directories(yul_proto_ossfuzz_evmone_ssacfg PRIVATE ${FUZZ_LPM_INCLUDE})
    target_compile_definitions(yul_proto_ossfuzz_evmone_ssacfg PRIVATE FUZZER_MODE_SSACFG)
    target_link_libraries(yul_proto_ossfuzz_evmone_ssacfg PRIVATE yul
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(yul_proto_ossfuzz_evmone_ssacfg PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(yul_proto_ossfuzz_evmone_ssacfg PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    add_executable(yul_proto_ossfuzz_evmone_check_stack_alloc
            yulProtoFuzzerEvmone.cpp
            FuzzerDiffCommon.cpp
            protoToYul.cpp
            yulProto.pb.cc
            ${EVMHOST_CPP}
            YulEvmoneInterface.cpp
    )
    target_include_directories(yul_proto_ossfuzz_evmone_check_stack_alloc PRIVATE ${FUZZ_LPM_INCLUDE})
    target_compile_definitions(yul_proto_ossfuzz_evmone_check_stack_alloc PRIVATE FUZZER_MODE_CHECK_STACK_ALLOC)
    target_link_libraries(yul_proto_ossfuzz_evmone_check_stack_alloc PRIVATE yul
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(yul_proto_ossfuzz_evmone_check_stack_alloc PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(yul_proto_ossfuzz_evmone_check_stack_alloc PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    # One binary per single-pass mode. The target pass abbreviation is baked
    # into the binary at compile time via FUZZER_SINGLE_PASS_CHAR, avoiding
    # any env-var plumbing at fuzz time. To add a pass, extend this list.
    foreach(pass c S L M s r D)
        set(_sp_target "yul_proto_ossfuzz_evmone_single_pass_${pass}")
        add_executable(${_sp_target}
                yulProtoFuzzerEvmone.cpp
                FuzzerDiffCommon.cpp
                protoToYul.cpp
                yulProto.pb.cc
                ${EVMHOST_CPP}
                YulEvmoneInterface.cpp
        )
        target_include_directories(${_sp_target} PRIVATE ${FUZZ_LPM_INCLUDE})
        target_compile_definitions(${_sp_target} PRIVATE
                FUZZER_MODE_SINGLE_PASS
                FUZZER_SINGLE_PASS_CHAR="${pass}"
        )
        target_link_libraries(${_sp_target} PRIVATE yul
                evmc
                ${FUZZ_EVMONE_LIBS}
                ${FUZZ_PROTO_LIBS}
        )
        set_target_properties(${_sp_target} PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
        target_compile_options(${_sp_target} PUBLIC
                ${COMPILE_OPTIONS}
                ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
        )
    endforeach()

    add_executable(yul_proto_ossfuzz_evmone_no_ssa
            yulProtoFuzzerEvmone.cpp
            FuzzerDiffCommon.cpp
            protoToYul.cpp
            yulProto.pb.cc
            ${EVMHOST_CPP}
            YulEvmoneInterface.cpp
    )
    target_include_directories(yul_proto_ossfuzz_evmone_no_ssa PRIVATE ${FUZZ_LPM_INCLUDE})
    target_compile_definitions(yul_proto_ossfuzz_evmone_no_ssa PRIVATE FUZZER_MODE_NO_SSA)
    target_link_libraries(yul_proto_ossfuzz_evmone_no_ssa PRIVATE yul
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(yul_proto_ossfuzz_evmone_no_ssa PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(yul_proto_ossfuzz_evmone_no_ssa PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    add_executable(shuffler_proto_ossfuzz
            shufflerProtoFuzzer.cpp
            protoToShuffler.cpp
            shufflerProto.pb.cc
    )
    target_include_directories(shuffler_proto_ossfuzz PRIVATE ${FUZZ_LPM_INCLUDE})
    target_link_libraries(shuffler_proto_ossfuzz PRIVATE yul
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(shuffler_proto_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(shuffler_proto_ossfuzz PUBLIC
            ${COMPILE_OPTIONS}
            ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS}
    )

    add_executable(abiv2_proto_ossfuzz
            ${EVMHOST_CPP}
            abiV2ProtoFuzzer.cpp
            SolidityEvmoneInterface.cpp
            protoToAbiV2.cpp
            abiV2Proto.pb.cc
    )
    target_include_directories(abiv2_proto_ossfuzz PRIVATE
            ${FUZZ_LPM_INCLUDE}
    )
    target_link_libraries(abiv2_proto_ossfuzz PRIVATE solidity
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(abiv2_proto_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(abiv2_proto_ossfuzz PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    add_executable(sol_proto_ossfuzz_nondiff
            solProtoFuzzer.cpp
            SolidityEvmoneInterface.cpp
            protoToSol.cpp
            solProto.pb.cc
            ${EVMHOST_CPP}
    )
    target_include_directories(sol_proto_ossfuzz_nondiff PRIVATE
            ${FUZZ_LPM_INCLUDE}
    )
    target_link_libraries(sol_proto_ossfuzz_nondiff PRIVATE solidity libsolc
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(sol_proto_ossfuzz_nondiff PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_proto_ossfuzz_nondiff PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    add_executable(sol_proto_ossfuzz_evmone
            solProtoFuzzer2.cpp
            FuzzerDiffCommon.cpp
            SolidityEvmoneInterface.cpp
            protoToSol2.cpp
            sol2Proto.pb.cc
            ${EVMHOST_CPP}
    )
    target_include_directories(sol_proto_ossfuzz_evmone PRIVATE
            ${FUZZ_LPM_INCLUDE}
    )
    target_link_libraries(sol_proto_ossfuzz_evmone PRIVATE solidity libsolc
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(sol_proto_ossfuzz_evmone PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_proto_ossfuzz_evmone PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    add_executable(sol_proto_ossfuzz_evmone_viair
            solProtoFuzzer2.cpp
            FuzzerDiffCommon.cpp
            SolidityEvmoneInterface.cpp
            protoToSol2.cpp
            sol2Proto.pb.cc
            ${EVMHOST_CPP}
    )
    target_include_directories(sol_proto_ossfuzz_evmone_viair PRIVATE
            ${FUZZ_LPM_INCLUDE}
    )
    target_compile_definitions(sol_proto_ossfuzz_evmone_viair PRIVATE FUZZER_MODE_VIAIR)
    target_link_libraries(sol_proto_ossfuzz_evmone_viair PRIVATE solidity libsolc
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(sol_proto_ossfuzz_evmone_viair PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_proto_ossfuzz_evmone_viair PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    # Frontend-ICE hunter: compile-only, no evmone, no differential. Looks for
    # InternalCompilerError and boost assertion failures on any sol2Proto output.
    add_executable(sol_ice_ossfuzz
            sol_ice_ossfuzz.cpp
            protoToSol2.cpp
            sol2Proto.pb.cc
    )
    target_include_directories(sol_ice_ossfuzz PRIVATE
            ${FUZZ_LPM_INCLUDE}
    )
    target_link_libraries(sol_ice_ossfuzz PRIVATE solidity libsolc
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(sol_ice_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_ice_ossfuzz PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    # Narrow-target fuzzer for report #1392: storage-to-storage whole-struct
    # assignment where the source aliases a descendant of the destination
    # through a recursive `Self[] children` field. Both legacy and IR codegens
    # miss the alias check, so this uses an in-contract oracle (test() returns
    # a bitmask of mismatched fields), not cross-config differential.
    add_executable(sol_recstruct_alias_ossfuzz
            solRecStructAliasFuzzer.cpp
            SolidityEvmoneInterface.cpp
            protoToSolRecStructAlias.cpp
            solRecStructAliasProto.pb.cc
            ${EVMHOST_CPP}
    )
    target_include_directories(sol_recstruct_alias_ossfuzz PRIVATE
            ${FUZZ_LPM_INCLUDE}
    )
    target_link_libraries(sol_recstruct_alias_ossfuzz PRIVATE solidity libsolc
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(sol_recstruct_alias_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_recstruct_alias_ossfuzz PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})

    # Identity-oracle fuzzer: asserts primitive-type identities
    # (abi round-trip, storage-mem round-trip, delete-default, cast ladder)
    # hold across Solidity codegen. Non-differential — any nonzero bit in
    # test()'s return is a violated identity.
    add_executable(sol_roundtrip_ossfuzz
            solRoundtripFuzzer.cpp
            SolidityEvmoneInterface.cpp
            protoToSolRoundtrip.cpp
            solRoundtripProto.pb.cc
            ${EVMHOST_CPP}
    )
    target_include_directories(sol_roundtrip_ossfuzz PRIVATE
            ${FUZZ_LPM_INCLUDE}
    )
    target_link_libraries(sol_roundtrip_ossfuzz PRIVATE solidity libsolc
            evmc
            ${FUZZ_EVMONE_LIBS}
            ${FUZZ_PROTO_LIBS}
    )
    set_target_properties(sol_roundtrip_ossfuzz PROPERTIES LINK_FLAGS ${LIB_FUZZING_ENGINE})
    target_compile_options(sol_roundtrip_ossfuzz PUBLIC ${COMPILE_OPTIONS} ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})
else()
    add_library(solc_ossfuzz
            solc_ossfuzz.cpp
            ../common/fuzzer_common.cpp
            )
    target_link_libraries(solc_ossfuzz PRIVATE libsolc evmasm)

    add_library(solc_mutator_ossfuzz
            solc_ossfuzz.cpp
            ../common/fuzzer_common.cpp
            )
    target_link_libraries(solc_mutator_ossfuzz PRIVATE libsolc evmasm)

    add_library(const_opt_ossfuzz
            const_opt_ossfuzz.cpp
            ../common/fuzzer_common.cpp)
    target_link_libraries(const_opt_ossfuzz PRIVATE libsolc evmasm)

    add_library(strictasm_opt_ossfuzz
            strictasm_opt_ossfuzz.cpp
            )
    target_link_libraries(strictasm_opt_ossfuzz PRIVATE yul)

    add_library(strictasm_assembly_ossfuzz
            strictasm_assembly_ossfuzz.cpp
            )
    target_link_libraries(strictasm_assembly_ossfuzz PRIVATE yul)

#    add_executable(abiv2_proto_ossfuzz
#            ${EVMHOST_CPP}
#            abiV2ProtoFuzzer.cpp
#            abiV2FuzzerCommon.cpp
#            protoToAbiV2.cpp
#            abiV2Proto.pb.cc
#    )
#    target_include_directories(abiv2_proto_ossfuzz PRIVATE
#            /src/LPM/external.protobuf/include
#            /src/libprotobuf-mutator
#            /src/evmone/include
#    )
#    target_link_libraries(abiv2_proto_ossfuzz PRIVATE solidity
#            evmone intx ethash keccak evmc-instructions evmc
#            protobuf-mutator-libfuzzer.a
#            protobuf-mutator.a
#            protobuf.a
#            FuzzingEngine.a
#    )
endif()
