# OSS-Fuzz / libFuzzer harnesses. See tools/ossfuzz/README.md for the per-binary
# breakdown. Most proto fuzzers share a source file and differ only by a
# FUZZER_MODE_* compile definition, so add_ossfuzz_target() (below) captures the
# common wiring and each target becomes a single declarative call.

if (OSSFUZZ)
    # --- Native fuzz dependencies (staged into deps/ by scripts/build_ossfuzz.sh) ---
    # libprotobuf-mutator and evmone-standalone are the only deps still built
    # from source; everything else (protobuf 35, abseil, boost) comes from the
    # system. LPM_PREFIX / EVMONE_PREFIX are passed on the cmake command line by
    # the build script; both default to the in-tree deps/ prefix.
    if (NOT LPM_PREFIX)
        set(LPM_PREFIX "${CMAKE_SOURCE_DIR}/deps")
    endif()
    if (NOT EVMONE_PREFIX)
        set(EVMONE_PREFIX "${CMAKE_SOURCE_DIR}/deps")
    endif()

    # LPM harnesses include <src/libfuzzer/libfuzzer_macro.h>; evmone harnesses
    # include <evmone/evmone.h>. Both header roots are added globally here so the
    # individual targets don't have to repeat them.
    include_directories(
        "${LPM_PREFIX}/include/libprotobuf-mutator"
        "${EVMONE_PREFIX}/include"
    )

    find_library(LPM_FUZZER_LIB protobuf-mutator-libfuzzer PATHS "${LPM_PREFIX}/lib" REQUIRED)
    find_library(LPM_LIB protobuf-mutator PATHS "${LPM_PREFIX}/lib" REQUIRED)
    find_library(EVMONE_STANDALONE_LIB evmone-standalone PATHS "${EVMONE_PREFIX}/lib" REQUIRED)
    # System protobuf. Prefer CONFIG mode (modern protobuf ≥22 ships a cmake
    # package config whose protobuf::libprotobuf target carries the abseil link
    # deps); fall back to the FindProtobuf module for older distro protobufs.
    find_package(Protobuf CONFIG QUIET)
    if (NOT Protobuf_FOUND)
        find_package(Protobuf MODULE REQUIRED)
    endif()

    # The protobuf compiler does not emit warning-free C++ bindings; silence the
    # known-noisy diagnostics on every harness (they all compile a *.pb.cc).
    set(SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS
        -Wno-sign-conversion
        -Wno-suggest-destructor-override
        -Wno-inconsistent-missing-destructor-override
        -Wno-shorten-64-to-32
        -Wno-deprecated
    )

    # Reusable link-library groups.
    set(FUZZ_PROTO_LIBS ${LPM_FUZZER_LIB} ${LPM_LIB} protobuf::libprotobuf)
    set(FUZZ_EVMONE_LIBS ${EVMONE_STANDALONE_LIB})

    # Define one libFuzzer harness. SOURCES / LIBS are required; DEFINES is the
    # optional FUZZER_MODE_* (etc.) list baked in at compile time.
    function(add_ossfuzz_target name)
        cmake_parse_arguments(ARG "" "" "SOURCES;LIBS;DEFINES" ${ARGN})
        add_executable(${name} ${ARG_SOURCES})
        target_link_libraries(${name} PRIVATE ${ARG_LIBS})
        set_target_properties(${name} PROPERTIES LINK_FLAGS "${LIB_FUZZING_ENGINE}")
        target_compile_options(${name} PRIVATE ${SILENCE_PROTOBUF_AUTOGENERATED_WARNINGS})
        if (ARG_DEFINES)
            target_compile_definitions(${name} PRIVATE ${ARG_DEFINES})
        endif()
    endfunction()

    # Shared source / library sets for the two big differential families.
    set(YUL_EVMONE_SOURCES
        yulProtoFuzzerEvmone.cpp FuzzerDiffCommon.cpp protoToYul.cpp
        yulProto.pb.cc ${EVMHOST_CPP} YulEvmoneInterface.cpp)
    set(YUL_EVMONE_LIBS yul evmc ${FUZZ_EVMONE_LIBS} ${FUZZ_PROTO_LIBS})

    set(SOL2_EVMONE_SOURCES
        solProtoFuzzer2.cpp FuzzerDiffCommon.cpp SolidityEvmoneInterface.cpp
        protoToSol2.cpp sol2Proto.pb.cc ${EVMHOST_CPP})
    set(SOL_EVMONE_LIBS solidity libsolc evmc ${FUZZ_EVMONE_LIBS} ${FUZZ_PROTO_LIBS})

    # --- single-input harnesses (frontend + yul; no proto grammar / evmone) ---
    add_ossfuzz_target(solc_ossfuzz
        SOURCES solc_ossfuzz.cpp ../common/fuzzer_common.cpp ${TESTCASEREADER_CPP}
        LIBS libsolc evmasm)
    add_ossfuzz_target(solc_mutator_ossfuzz
        SOURCES solc_ossfuzz.cpp ../common/fuzzer_common.cpp ${TESTCASEREADER_CPP}
                SolidityGenerator.cpp SolidityCustomMutatorInterface.cpp
        LIBS libsolc evmasm)
    add_ossfuzz_target(const_opt_ossfuzz
        SOURCES const_opt_ossfuzz.cpp ../common/fuzzer_common.cpp
        LIBS libsolc evmasm)
    add_ossfuzz_target(strictasm_opt_ossfuzz SOURCES strictasm_opt_ossfuzz.cpp LIBS yul)
    add_ossfuzz_target(strictasm_assembly_ossfuzz SOURCES strictasm_assembly_ossfuzz.cpp LIBS yul)

    # --- yul differential family (one binary per optimizer mode) ---
    add_ossfuzz_target(yul_proto_ossfuzz_evmone
        SOURCES ${YUL_EVMONE_SOURCES} LIBS ${YUL_EVMONE_LIBS})
    add_ossfuzz_target(yul_proto_ossfuzz_evmone_ssacfg
        SOURCES ${YUL_EVMONE_SOURCES} LIBS ${YUL_EVMONE_LIBS} DEFINES FUZZER_MODE_SSACFG)
    add_ossfuzz_target(yul_proto_ossfuzz_evmone_check_stack_alloc
        SOURCES ${YUL_EVMONE_SOURCES} LIBS ${YUL_EVMONE_LIBS} DEFINES FUZZER_MODE_CHECK_STACK_ALLOC)
    add_ossfuzz_target(yul_proto_ossfuzz_evmone_no_ssa
        SOURCES ${YUL_EVMONE_SOURCES} LIBS ${YUL_EVMONE_LIBS} DEFINES FUZZER_MODE_NO_SSA)

    # One binary per single-pass mode; the pass char is baked in at compile time
    # via FUZZER_SINGLE_PASS_CHAR (no env-var plumbing at fuzz time). To add a
    # pass, extend this list.
    foreach(pass c S L M s r D)
        add_ossfuzz_target(yul_proto_ossfuzz_evmone_single_pass_${pass}
            SOURCES ${YUL_EVMONE_SOURCES} LIBS ${YUL_EVMONE_LIBS}
            DEFINES FUZZER_MODE_SINGLE_PASS FUZZER_SINGLE_PASS_CHAR="${pass}")
    endforeach()

    # --- sol differential family (sol2 grammar) ---
    add_ossfuzz_target(sol_proto_ossfuzz_evmone
        SOURCES ${SOL2_EVMONE_SOURCES} LIBS ${SOL_EVMONE_LIBS})
    add_ossfuzz_target(sol_proto_ossfuzz_evmone_viair
        SOURCES ${SOL2_EVMONE_SOURCES} LIBS ${SOL_EVMONE_LIBS} DEFINES FUZZER_MODE_VIAIR)

    # frontend-ICE hunter: compile-only, no evmone, no differential (see README).
    add_ossfuzz_target(sol_ice_ossfuzz
        SOURCES sol_ice_ossfuzz.cpp protoToSol2.cpp sol2Proto.pb.cc
        LIBS solidity libsolc ${FUZZ_PROTO_LIBS})

    # legacy non-differential sol fuzzer (older solProto grammar).
    add_ossfuzz_target(sol_proto_ossfuzz_nondiff
        SOURCES solProtoFuzzer.cpp SolidityEvmoneInterface.cpp protoToSol.cpp
                solProto.pb.cc ${EVMHOST_CPP}
        LIBS ${SOL_EVMONE_LIBS})

    # narrow report-#1392 recursive-struct aliasing harness (in-contract oracle).
    add_ossfuzz_target(sol_recstruct_alias_ossfuzz
        SOURCES solRecStructAliasFuzzer.cpp SolidityEvmoneInterface.cpp
                protoToSolRecStructAlias.cpp solRecStructAliasProto.pb.cc ${EVMHOST_CPP}
        LIBS ${SOL_EVMONE_LIBS})

    # identity-oracle round-trip harness.
    add_ossfuzz_target(sol_roundtrip_ossfuzz
        SOURCES solRoundtripFuzzer.cpp SolidityEvmoneInterface.cpp
                protoToSolRoundtrip.cpp solRoundtripProto.pb.cc ${EVMHOST_CPP}
        LIBS ${SOL_EVMONE_LIBS})

    # stack-shuffler proto fuzzer (no solidity / evmone).
    add_ossfuzz_target(shuffler_proto_ossfuzz
        SOURCES shufflerProtoFuzzer.cpp protoToShuffler.cpp shufflerProto.pb.cc
        LIBS yul ${FUZZ_PROTO_LIBS})

    # ABIv2 proto fuzzer.
    add_ossfuzz_target(abiv2_proto_ossfuzz
        SOURCES ${EVMHOST_CPP} abiV2ProtoFuzzer.cpp SolidityEvmoneInterface.cpp
                protoToAbiV2.cpp abiV2Proto.pb.cc
        LIBS solidity evmc ${FUZZ_EVMONE_LIBS} ${FUZZ_PROTO_LIBS})

    # Aggregate targets driven by scripts/build_ossfuzz.sh.
    add_custom_target(ossfuzz_proto)
    add_dependencies(ossfuzz_proto
        sol_proto_ossfuzz_nondiff
        sol_proto_ossfuzz_evmone
        sol_proto_ossfuzz_evmone_viair
        sol_ice_ossfuzz
        yul_proto_ossfuzz_evmone
        yul_proto_ossfuzz_evmone_ssacfg
        yul_proto_ossfuzz_evmone_check_stack_alloc
        yul_proto_ossfuzz_evmone_single_pass_c
        yul_proto_ossfuzz_evmone_single_pass_S
        yul_proto_ossfuzz_evmone_single_pass_L
        yul_proto_ossfuzz_evmone_single_pass_M
        yul_proto_ossfuzz_evmone_single_pass_s
        yul_proto_ossfuzz_evmone_single_pass_r
        yul_proto_ossfuzz_evmone_single_pass_D
        yul_proto_ossfuzz_evmone_no_ssa
        shuffler_proto_ossfuzz
        sol_recstruct_alias_ossfuzz
        sol_roundtrip_ossfuzz
    )

    add_custom_target(ossfuzz_abiv2)
    add_dependencies(ossfuzz_abiv2 abiv2_proto_ossfuzz)
else()
    # Property / host build: the single-input harnesses are built as plain
    # libraries (linked into test drivers), not libFuzzer executables.
    add_library(solc_ossfuzz solc_ossfuzz.cpp ../common/fuzzer_common.cpp)
    target_link_libraries(solc_ossfuzz PRIVATE libsolc evmasm)

    add_library(solc_mutator_ossfuzz solc_ossfuzz.cpp ../common/fuzzer_common.cpp)
    target_link_libraries(solc_mutator_ossfuzz PRIVATE libsolc evmasm)

    add_library(const_opt_ossfuzz const_opt_ossfuzz.cpp ../common/fuzzer_common.cpp)
    target_link_libraries(const_opt_ossfuzz PRIVATE libsolc evmasm)

    add_library(strictasm_opt_ossfuzz strictasm_opt_ossfuzz.cpp)
    target_link_libraries(strictasm_opt_ossfuzz PRIVATE yul)

    add_library(strictasm_assembly_ossfuzz strictasm_assembly_ossfuzz.cpp)
    target_link_libraries(strictasm_assembly_ossfuzz PRIVATE yul)
endif()

# Aggregate "ossfuzz" target: the five single-input harnesses, which exist in
# both build modes (executables under OSSFUZZ, libraries otherwise).
add_custom_target(ossfuzz)
add_dependencies(ossfuzz
    solc_ossfuzz
    solc_mutator_ossfuzz
    const_opt_ossfuzz
    strictasm_opt_ossfuzz
    strictasm_assembly_ossfuzz
)
